2004-11-27 Colin McCormack <colin@sharedtech.dyndns.org>
	* renamed custom/dodirs.tcl to custom/zzzdodirs.tcl to place
	directories after files in custom library load

2004-11-20 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/direct.tcl: export DirectRespond as Direct_Respond
	It makes no sense to export Direct_Marshall, and not Direct_Respond
	Direct_Respond is generally useful in custom domains.
	
2004-11-07 Michael Thomas <wart@kobold.org>
        * config/tcl.m4:  Add the value that was passed to the --libdir
          configure switch to the search path for tclConfig.sh

2004-10-22 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/*.tcl: added braces around all [if] conditionals - for speed
	* lib/{doc,template}.tcl: removed redundant prefix arg from Template_Try

2004-10-19 Colin McCormack <colin@sharedtech.dyndns.org>
	* session.tcl: Added SessionFetch and SessionDiscard to get and clean up
	old session persistent state,
	* session.tcl: Use Httpd_*Cookie commands to avoid races

2004-09-05 Colin McCormack <colin@sharedtech.dyndns.org>
	* session.tcl: fixed error in Session_Value and Session_Variable,
	fixed error in session saving for values with \n

2004-09-13 Brent Welch <welch@panasas.com>
        * removed htdocs/cgi-bin/env, which was a sparc executable.

2004-09-05 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/*.tcl, lib/MakeIndex: added explicit package requires
	to each component for each required component.

2004-08-23 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/digest.tcl: force md5 calculations to be lower case hex
	As the spec requires.

2004-08-23 Colin McCormack <colin@sharedtech.dyndns.org>
	* lib/{cgi,http}.tcl: Changed name of HttpDate to Http_Date
	in conformance with naming policy, since cgi.tcl was using it.

2004-08-16 Brent Welch <welch@panasas.com>
        * lib/url.tcl: check for URL requests that don't begin with /.
          Browsers won't generate these, but attacks on the server might try